--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "dependencies": {
     "next": "^15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-swipeable": "^7.0.2",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
