--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.5",
     "next": "^15.1.4",
     "quill": "^1.3.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
+    "react-image-gallery": "^1.3.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-quill": "^2.0.0",
+    "react-slick": "^0.30.3",
     "react-swipeable": "^7.0.2",
+    "react-toastify": "^11.0.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
