--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "next": "^15.1.4",
     "quill": "^1.3.7",
@@ -26,14 +30,17 @@
     "react-slick": "^0.30.3",
     "react-swipeable": "^7.0.2",
     "react-toastify": "^11.0.3",
+    "react-top-loading-bar": "^3.0.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "@types/react": "19.0.8",
     "jest": "^29.7.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.3"
   }
 }
