--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "next": "^15.1.4",
+    "nextjs-google-analytics": "^2.3.7",
     "quill": "^1.3.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
