--- a/package.json
+++ b/package.json
@@ -43,15 +43,16 @@
     "react-top-loading-bar": "^3.0.2",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.2.1",
-    "vercel": "^41.0.2"
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
+
     "@testing-library/react": "^16.1.0",
     "@types/react": "19.0.8",
     "jest": "^29.7.0",
-    "postcss": "^8",
+    "package-name": "^0.1.0",
+    "postcss": "^8",  
     "tailwindcss": "^3.4.1",
     "typescript": "5.7.3"
   }
