--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "browser-image-compression": "^2.0.2",
+    "cloudinary": "^2.5.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -47,12 +48,12 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
-
     "@testing-library/react": "^16.1.0",
+    "@types/node": "22.13.1",
     "@types/react": "19.0.8",
     "jest": "^29.7.0",
     "package-name": "^0.1.0",
-    "postcss": "^8",  
+    "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.7.3"
   }
