webiste is ready to live

--- a/.env.local
+++ b/.env.local
@@ -12,6 +12,11 @@ DOMAIN=https://www.mamtarealty.com
 MONGO_URL=mongodb+srv://ranjiv:Ranjiv1987@aws.5aev6.mongodb.net/mamtarealty?retryWrites=true&w=majority&appName=aws
 
 
+//CLOUDINARY name 
+CLOUDINARY_CLOUD_NAME=do2tcgbpv
+CLOUDINARY_API_KEY=666774483314245
+CLOUDINARY_API_SECRET=F6LsAYVUVTYhOUvzfFqovpMh8Kk
+
 
 // admin jwt secret key 
 
